--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -62,7 +62,7 @@
   <button
     type="submit"
     class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transitio hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
-    [disabled]="registrationForm.invalid"
+    [disabled]="registrationForm.invalid || isCreatingUser"
   >
     Submit
   </button>
