add login and registration process

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,3 +1,7 @@
+<app-alert *ngIf="showAlert" [color]="alertColor">
+  {{ alertMsg }}
+</app-alert>
+
 <!-- Login Form -->
 <form #loginForm="ngForm">
   <!-- Email -->
@@ -24,9 +28,8 @@
   <div class="mb-3">
     <label class="inline-block mb-2">Password</label>
     <input
-      value="password"
       required
-      [(ngModel)]="credentials.password"
+      [(ngModel)]="credentials.email"
       #password="ngModel"
       type="password"
       class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
@@ -40,6 +43,8 @@
     </p>
   </div>
   <button
+  (click)="login()"
+  [disabled]="isUserLogingIn || loginForm.invalid"
     type="submit"
     class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500"
   >
