--- a/src/app/video/manage/manage.component.html
+++ b/src/app/video/manage/manage.component.html
@@ -40,7 +40,7 @@
           <a (click)="onEditClip($event, clip)" href="#" class="flex-1 p-2 border-right border-r-2 border-gray-700 transition hover:text-indigo-400">
             <span class="material-icons text-base">build</span>
           </a>
-          <a href="#" class="flex-1 p-2 rounded-br-2xl transition hover:text-indigo-400">
+          <a (click)="onDeleteClip($event, clip)" href="#" class="flex-1 p-2 rounded-br-2xl transition hover:text-indigo-400">
             <span class="material-icons text-base">delete</span>
           </a>
         </div>
@@ -49,4 +49,4 @@
     </div>
   </div>
 
-  <app-edit></app-edit>
+  <app-edit [activeClip]="activeClip" (update)="update($event)"></app-edit>
