--- a/src/app/shared/alert/alert.component.html
+++ b/src/app/shared/alert/alert.component.html
@@ -1,6 +1,3 @@
-<div
-  class="text-white text-center font-bold p4 mb-4 rounded-md"
-  [ngClass]="backgroundColor"
->
-  <ng-content></ng-content>
+<div class="text-white text-center font-bold p4 mb-4 rounded-md" [ngClass]="backgroundColor">
+    <ng-content></ng-content>
 </div>
