--- a/src/app/video/edit/edit.component.html
+++ b/src/app/video/edit/edit.component.html
@@ -1,27 +1,28 @@
 <!-- Edit Modal -->
 <app-modal modalId="editClip">
-  <p class="text-2xl font-bold">Edit Video</p>
+    <p class="text-2xl font-bold">Edit Video</p>
 
-  <app-alert *ngIf="showAlert" [color]="alertColor">
-    <p>{{ alertMsg }}</p>
-  </app-alert>
+    <app-alert *ngIf="showAlert" [color]="alertColor">
+        <p>{{ alertMsg }}</p>
+    </app-alert>
 
-  <!-- Form -->
-  <form [formGroup]="editForm"  (ngSubmit)="onSubmitEditClip()">
-    <!-- Title -->
-    <div class="mt-4">
-      <label class="block text-xl mb-4">Title</label>
-      <app-input [control]="editForm.controls.title" placeholder="Enter title"></app-input>
-    </div>
+    <!-- Form -->
+    <form [formGroup]="editForm" (ngSubmit)="onSubmitEditClip()">
+        <!-- Title -->
+        <div class="mt-4">
+            <label class="block text-xl mb-4">Title</label>
+            <app-input [control]="editForm.controls.title" placeholder="Enter title"></app-input>
+        </div>
 
-    <div class="mt-4 text-right">
-      <button
-            [ngClass]="{'opacity-50': isSubmission, 'hover:bg-indigo-700': !isSubmission}"
-            [disabled]="isSubmission"
-            type="submit"
-            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 focus:outline-none">
-              Update
+        <div class="mt-4 text-right">
+            <button
+                [ngClass]="{ 'opacity-50': isSubmission, 'hover:bg-indigo-700': !isSubmission }"
+                [disabled]="isSubmission"
+                type="submit"
+                class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 focus:outline-none"
+            >
+                Update
             </button>
-    </div>
-  </form>
+        </div>
+    </form>
 </app-modal>
