--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -32,7 +32,7 @@
                         >
                     </li>
                     <li>
-                        <a class="px-2" (click)="authService.logout($event)">Sign Out</a>
+                        <a class="px-2 cursor-pointer" (click)="authService.logout($event)">Sign Out</a>
                     </li>
                 </ng-template>
                 <li routerLinkActive="text-indigo-400">
