--- a/src/app/shared/tabs-container/tabs-container.component.html
+++ b/src/app/shared/tabs-container/tabs-container.component.html
@@ -1,16 +1,13 @@
-<!-- Tabs -->
 <ul class="flex flex-wrap mb-4">
     <li *ngFor="let tab of tabs" class="flex-auto text-center">
         <a
-            class="block rounded py-3 px-4 transition hover:text-white text-white bg-indigo-400"
+            class="block rounded py-3 px-4 transition"
+            [ngClass]="[tab.isActive ? 'hover:text-white text-white bg-indigo-400' : 'hover:text-indigo-400']"
             href="#"
-            [ngClass]="{
-                'hover:text-indigo-400': !tab.isActive,
-                'hover:text-white text-white bg-indigo-400': tab.isActive,
-            }"
             (click)="selectTab(tab)"
-            >{{ tab.tabTitle }}</a
         >
+            {{ tab.tabTitle }}
+        </a>
     </li>
 </ul>
 
