--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -30,11 +30,11 @@
                         <h5>Drop your file here (mp4 only!)</h5>
                     </div>
                     <ng-template #generateThumbnails>
-                        <h5>Generating Thumbnails. Please wait</h5>
+                        <h5>Processing video. Please wait!</h5>
                         <span class="material-icons text-center text-6xl p-8 animate-spin">autorenew</span>
                     </ng-template>
                 </div>
-                <input type="file" class="mt-4" (change)="storeFile($event)" />
+                <input type="file" class="mt-4" (change)="storeFile($event)" [disabled]="ffmpegService.isRunning" />
             </ng-container>
 
             <!-- Video Editor -->
@@ -65,6 +65,14 @@
                     </div>
 
                     <div class="mt-4 text-right">
+                        <button
+                            [ngClass]="{ 'opacity-50': isSubmission, 'hover:bg-cyan-700': !isSubmission }"
+                            [disabled]="isSubmission"
+                            (click)="cancelUpload()"
+                            class="inline-flex justify-center py-2 px-4 border border-transparent mr-4 shadow-sm rounded-md text-white bg-cyan-600 focus:outline-none"
+                        >
+                            Cancel
+                        </button>
                         <button
                             [ngClass]="{ 'opacity-50': isSubmission, 'hover:bg-indigo-700': !isSubmission }"
                             [disabled]="isSubmission"
