--- a/src/app/video/manage/manage.component.html
+++ b/src/app/video/manage/manage.component.html
@@ -20,8 +20,8 @@
             class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary flex flex-col justify-start"
         >
             <!-- Image -->
-            <a href="#">
-                <img class="card-img-top rounded-tl-2xl w-full" [src]="clip.screenshotURL" crossorigin loading="lazy" />
+            <a [routerLink]="['/', 'clip', clip.docID]">
+                <app-image-loader [imageUrl]="clip.screenshotURL"></app-image-loader>
             </a>
 
             <!-- Body -->
