--- a/src/app/clips-list/clips-list.component.html
+++ b/src/app/clips-list/clips-list.component.html
@@ -6,12 +6,7 @@
         class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300"
     >
         <!-- Image -->
-        <img
-            class="card-img-top rounded-tl-2xl w-full img_height--400px"
-            loading="lazy"
-            [src]="clip.screenshotURL"
-            crossorigin
-        />
+        <app-image-loader [imageUrl]="clip.screenshotURL"></app-image-loader>
 
         <!-- Shape -->
         <div class="relative">
